--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,18 @@ UPDATE_INTERVAL=60
 
 # Uptime check interval in seconds (default: 3600 = 1 hour)
 UPTIME_CHECK_INTERVAL=3600
+
+# Spread updates in seconds to avoid Discord rate limits (default: 0.5)
+UPDATE_SPREAD_SECONDS=0.5
+
+# Logging level (DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL=INFO
+
+# Prefer a specific local interface (e.g., tailscale0). Leave empty to auto-detect.
+LOCAL_INTERFACE=tailscale0
+
+# SSH host key checking (recommended true with known_hosts)
+STRICT_HOST_KEY_CHECKING=false
+
+# Optional known_hosts path (e.g., ~/.ssh/known_hosts)
+KNOWN_HOSTS_FILE=
